--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'DFKai-SB', 'Microsoft JhengHei', Arial, sans-serif;
+}
+
 html {
     height: 100%;
 }
@@ -15,17 +19,7 @@ body {
 
 #left {
     background-color: rgba(93, 170, 248, 0.3);
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#right {
-    background-color: rgba(126, 251, 126, 0.3);
-    width: 50%;
+    width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -36,6 +30,124 @@ body {
 #myphoto {
     width: 30%;
     border-radius: 30%;
+}
+
+#right {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    align-items: center;
+}
+
+#right_head {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.head_button {
+    background-color: rgba(131, 130, 130, 0.5);
+    width: 250px;
+    height: 100x;
+    font-size: 44px;
+    border-radius: 30px;
+    border: black;
+    color: white;
+}
+
+#right_body {
+    background-color: rgba(116, 216, 116, 0.3);
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-viewer__title {
+	font-size: 5rem;
+	font-weight: 600;
+	color: white;
+	
+}
+
+.image-viewer__main {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.image-viewer__button {
+	display: inline;
+	background: none;
+	border: none;
+	border-radius: 50%;
+}
+
+.image-viewer__button img {
+	width: 80px;
+	height: 80px;
+	border: 1px solid transparent;
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+.image-viewer__button img:hover {
+	border: 1px solid black;
+	border-radius: 50%;
+}
+
+.image-viewer__button:focus {
+	outline: none;
+}
+
+
+.image-viewer__display {
+	background-image: url(img/loading.gif);
+	background-position: center;
+	background-repeat: no-repeat;
+	position: relative;
+	padding: 15px;
+	margin: 3rem;
+	max-width: 80rem;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: center;
+    font-size: 36px;
+}
+
+.image-viewer__display-source-wrapper {
+    width: 100%;
+    text-align: center;
+}
+
+#display {
+	object-fit: contain;
+	width: 50rem;
+	height: 30rem;
+	margin-bottom: 1rem;
+}
+
+#source {
+	display: inline;
+	color: black;
+}
+
+.disabled {
+	opacity: 0.2;
+}
+
+.disabled:hover {
+	border-color: transparent !important;
+	cursor: not-allowed;
 }
 
 h1 {
@@ -53,30 +165,13 @@ h2 {
 }
 
 #basic {
-    font-size: 56px;
+    font-size: 36px;
     color: rgb(245, 212, 206);
 }
 
-#basic ul {
-    font-size: 36px;
-}
-
-#school {
-    font-size: 56px;
-    color: rgb(242, 245, 205);
-}
-
-#school ol {
-    font-size: 36px;
-}
-
 #prof {
-    font-size: 56px;
-    color: rgb(194, 205, 243);
-}
-
-#prof ul {
     font-size: 36px;
+    color: rgb(194, 205, 243);
 }
 
 #favor {
